objects/BP_ApplicationReference__c.object
<CustomObject><fields>
        <fullName>AbilityToFollow__c</fullName>
        <label>Ability to Follow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>AbilitytoWorkWithOthers__c</fullName>
        <label>Ability to Work With Others</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>BP_Application__c</referenceTo>
        <relationshipLabel>Application References</relationshipLabel>
        <relationshipName>BP_ApplicationReferences</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ConcernForOthers__c</fullName>
        <label>Concern For Others</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ContactApplicant__c</fullName>
        <label>Contact (Applicant)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application References</relationshipLabel>
        <relationshipName>BP_ApplicationReferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>ContactRefereeEmail__c</fullName>
        <label>Contact Referee Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>ContactReferee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact (Referee)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application References (Referee)</relationshipLabel>
        <relationshipName>ApplicationReferencesReferee</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>DateSubmitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields><fields>
        <fullName>EmotionalStability__c</fullName>
        <label>Emotional Stability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FamilyBackground__c</fullName>
        <inlineHelpText>Please comment briefly on the applicant's family background.</inlineHelpText>
        <label>Family Background</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>FinancialResponsibility__c</fullName>
        <label>Financial Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FlexibilityOpennesstoChange__c</fullName>
        <label>Flexibility/Openness to Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FurtherCharacterGrowth__c</fullName>
        <inlineHelpText>Where do you think the applicant needs further character growth?</inlineHelpText>
        <label>Further Character Growth</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Further_Information__c</fullName>
        <inlineHelpText>Is there any further information that would help us process the application?</inlineHelpText>
        <label>Further Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>GeneralComments__c</fullName>
        <label>General Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>GratefulSpirit__c</fullName>
        <label>Grateful Spirit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>High_Moral_Standards__c</fullName>
        <inlineHelpText>Question: Does the applicant display high moral standards?</inlineHelpText>
        <label>High Moral Standards</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IndustrialHardWorker__c</fullName>
        <label>Industrial/Hard Worker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>InitiativeSelfStarter__c</fullName>
        <label>Initiative/Self Starter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>LeadershipAbility__c</fullName>
        <label>Leadership Ability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>LengthYouHaveKnownTheApplicant__c</fullName>
        <inlineHelpText>How long have you known the applicant?</inlineHelpText>
        <label>Length you’ve known the applicant</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PersonalAppearance__c</fullName>
        <label>Personal Appearance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>PositiveAttitude__c</fullName>
        <label>Positive Attitude</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>PresentRelationshipWithGod__c</fullName>
        <inlineHelpText>How would you describe the applicant's present relationship with God?</inlineHelpText>
        <label>Present Relationship With God</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ReferenceLanguage__c</fullName>
        <label>Reference Language</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RelationshipswithOthers__c</fullName>
        <inlineHelpText>How would you describe the applicants relational skills with others?</inlineHelpText>
        <label>Relational Skills</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Reliability__c</fullName>
        <label>Reliability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ResponsetoAuthorityFigures__c</fullName>
        <label>Response to Authority Figures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ResponsetoPressureStress__c</fullName>
        <label>Response to Pressure/Stress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ServantHeart__c</fullName>
        <label>Servant Heart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>SkillsTalentsandStrengths__c</fullName>
        <inlineHelpText>What skills, talents and strengths have you observed?</inlineHelpText>
        <label>Skills, Talents and Strengths</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TeachableSpirit__c</fullName>
        <label>Teachable Spirit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TypeOfReference__c</fullName>
        <label>Type of Reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Spiritual Leader</fullName>
                </value>
                <value>
                    <fullName>Teacher-Employer</fullName>
                </value>
                <value>
                    <fullName>YWAM Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TypeofEnvironment__c</fullName>
        <inlineHelpText>What type of environment does the student function best in?</inlineHelpText>
        <label>Type of Environment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>WillingnesstoBeAccountable__c</fullName>
        <label>Willingness to Be Accountable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                    <default>true</default>
                    <label>Above Average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>WouldYouChoosetoWorkWithThem__c</fullName>
        <label>Would You Choose to Work With Them</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>WouldYouRecommendtoAcceptThem__c</fullName>
        <inlineHelpText>Would you recommend this applicant for acceptance at YWAM Lausanne?</inlineHelpText>
        <label>Would You Recommend to Accept Them</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>XrefId__c</fullName>
        <label>XrefId</label>
        <length>30</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Application Reference</label><nameField>
        <label>Application Reference Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Application References</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>EmployerTeacherFriend</fullName>
        <active>true</active>
        <label>Employer/Teacher/Friend</label>
    </recordTypes><recordTypes>
        <fullName>YWAMLeaderPastorSLeader</fullName>
        <active>true</active>
        <label>YWAMLeader/Pastor/S.Leader</label>
    </recordTypes></CustomObject>